
\name{NEWS}
\title{NEWS file for the mlt.docreg package}

\section{Changes in Version 0.1-3 (2016-12-01)}{
  \itemize{
    \item{Some tests were a little too strict on non-Linux platforms.}
  }
}

\section{Changes in Version 0.1-2 (2016-11-29)}{
  \itemize{
    \item{Add tests for survival models with time-dependent covariates.}
  }
}

\section{Changes in Version 0.1-1 (2016-11-17)}{
  \itemize{
    \item{Some fixes in vignette.}
  }
}

\section{Changes in Version 0.1-0 (2016-11-09)}{
  \itemize{
    \item{Update to \pkg{mlt} 0.1-0; small fixes in vignette and reference outputs.}
  }
}

\section{Changes in Version 0.0-33 (2016-09-12)}{
  \itemize{
    \item{Update to \pkg{mlt} 0.0-34; small fixes in vignette.}
  }
}

\section{Changes in Version 0.0-32 (2016-05-25)}{
  \itemize{
    \item{Remove \pkg{intcox} as the package is archived now.}
  }
}

\section{Changes in Version 0.0-30 (2016-02-23)}{
  \itemize{
    \item{The \pkg{mlt.docreg} package was first 
          published on CRAN.}
  }
}