@@ -1,7 +1,7 @@
 Package: mlt.docreg
 Title: Most Likely Transformations: Documentation and Regression Tests
-Version: 0.1-3
-Date: 2016-12-01
+Version: 0.1-4
+Date: 2016-12-02
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Additional documentation, a package vignette and 
